mobile readability fix

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -250,22 +250,28 @@ section {
   .information_wrapper {
     width: 100%;
     height: 100%;
-    max-width: 75%;
-    padding: 0 0 1em 2em;
+    max-width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     @media (min-width: 768px) {
-      max-width: 50%;
+      max-width: 55%;
     }
     h2, h3, h4 {
       margin: 0;
       font-weight: 300;
       text-transform: uppercase;
+      background: transparentize($white,.15);
+      padding: 0 10%;
+      @media (min-width: 768px) {
+        background: none;
+        padding: 0 5%;
+      }
     }
     h3 {
       color: $light-gray;
       font-size: 1.25em;
+      padding-top: .5em;
       @media (min-width: 768px) {
         font-size: 1.75em;
       }
@@ -275,9 +281,9 @@ section {
     }
     h2, h4 {
       color: $dark-gray;
-      font-size: 2.5em;
+      font-size: 2em;
       @media (min-width: 768px) {
-        font-size: 3.5em;
+        font-size: 3em;
       }
       @media (min-width: 1024px) {
         font-size: 4em;
@@ -287,7 +293,13 @@ section {
       font-size: .85em;
       font-weight: 300;
       line-height: 1.5em;
-      margin-bottom: .5em;
+      margin: 0;
+      padding: .5em 10%;
+      background: transparentize($white,.15);
+      @media (min-width: 768px) {
+        background: none;
+        padding: .5em 5%;
+      }
       a {
         text-decoration: none;
         font-weight: 700;
@@ -313,7 +325,6 @@ section {
     }
     &.mirrored {
       text-align: right;
-      padding: 0 2em 1em 0;
       margin-left: auto;
     }
   }
@@ -323,6 +334,9 @@ section {
 #biography {
   background: transparentize($black,.95);
   margin-bottom: 0;
+  h2 {
+    padding-top: .25em;
+  }
   p {
     font-size: .75em;
     @media (min-width: 768px) {
@@ -357,10 +371,12 @@ section {
     }
     h3 {
       color: $white;
+      background: none;
     }
     p {
       color: $white;
       font-size: .85em;
+      background: none;
       @media (min-width: 768px) {
         font-size: 1em;
       }
@@ -391,10 +407,14 @@ section {
     padding-bottom: 0;
     h2 {
       color: $white;
+      background: none;
     }
   }
   form {
-    padding-bottom: 2em;
+    padding: 0 10% 2em 10%;
+    @media (min-width: 768px) {
+      padding: 0 5% 2em 5%;
+    }
     input, textarea {
       width: 90%;
       max-width: 480px;
